# gamelibs-meshoptimizer

./: Makefile  meson.build
msvc/: meshoptimizer.vcxproj  meshoptimizer.vcxproj.filters
src/: allocator.cpp  meshoptimizer.h
